// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Accordion > renders correctly with props 1`] = `
<div
  aria-orientation="horizontal"
  class="accordion horizontal"
>
  
  <section
    data-expanded="false"
  >
    <header>
      <button
        aria-expanded="false"
        tabindex="0"
        type="button"
      >
        <img
          class="icon"
          style="display: none;"
        />
        <span>
          Subpane 1
        </span>
      </button>
    </header>
    <transition-stub
      appear="true"
      css="true"
      name="expand"
      persisted="false"
    >
      <!--v-if-->
    </transition-stub>
  </section>
  <section
    data-expanded="true"
  >
    <header>
      <button
        aria-expanded="true"
        tabindex="0"
        type="button"
      >
        <img
          class="icon"
          style="display: none;"
        />
        <span>
          Subpane 2
        </span>
      </button>
    </header>
    <transition-stub
      appear="true"
      css="true"
      name="expand"
      persisted="false"
    >
      <div
        class="pane"
        role="region"
      >
        <div
          title="Subpane 2"
        >
          <p>
            Subpane 2 content
          </p>
        </div>
      </div>
    </transition-stub>
  </section>
  <section
    data-expanded="false"
  >
    <header>
      <button
        aria-expanded="false"
        tabindex="0"
        type="button"
      >
        <img
          class="icon"
          style="display: none;"
        />
        <span>
          Subpane 3
        </span>
      </button>
    </header>
    <transition-stub
      appear="true"
      css="true"
      name="expand"
      persisted="false"
    >
      <!--v-if-->
    </transition-stub>
  </section>
  
</div>
`;

exports[`Accordion > renders correctly with slot 1`] = `
<div
  aria-orientation="vertical"
  class="accordion vertical"
>
  
  <section
    data-expanded="true"
  >
    <header>
      <button
        aria-expanded="true"
        tabindex="0"
        type="button"
      >
        <img
          class="icon"
          style="display: none;"
        />
        <span>
          Subpane 1
        </span>
      </button>
    </header>
    <transition-stub
      appear="true"
      css="true"
      name="expand"
      persisted="false"
    >
      <div
        class="pane"
        role="region"
      >
        <div
          title="Subpane 1"
        >
          <p>
            Subpane 1 content
          </p>
        </div>
      </div>
    </transition-stub>
  </section>
  <section
    data-expanded="false"
  >
    <header>
      <button
        aria-expanded="false"
        tabindex="0"
        type="button"
      >
        <img
          class="icon"
          style="display: none;"
        />
        <span>
          Subpane 2
        </span>
      </button>
    </header>
    <transition-stub
      appear="true"
      css="true"
      name="expand"
      persisted="false"
    >
      <!--v-if-->
    </transition-stub>
  </section>
  <section
    data-expanded="false"
  >
    <header>
      <button
        aria-expanded="false"
        tabindex="0"
        type="button"
      >
        <img
          class="icon"
          style="display: none;"
        />
        <span>
          Subpane 3
        </span>
      </button>
    </header>
    <transition-stub
      appear="true"
      css="true"
      name="expand"
      persisted="false"
    >
      <!--v-if-->
    </transition-stub>
  </section>
  
</div>
`;
